pkg/ibmvpc/examples/out/explain_out/NACLInternal2_all_vpcs_explain_detail.txt
Explaining connectivity from vsi2-ky to 10.240.10.4 within test-vpc1-ky
Interpreted source: vsi2-ky[10.240.20.4]
Interpreted destination: vsi1-ky[10.240.10.4]
=======================================================================

Connections from vsi2-ky[10.240.20.4] to vsi1-ky[10.240.10.4]: All Connections

Path:
	vsi2-ky[10.240.20.4] -> security group sg1-ky -> network ACL acl2-ky -> subnet2-ky -> 
	subnet1-ky -> network ACL acl1-ky -> security group sg1-ky -> vsi1-ky[10.240.10.4]


Details:
~~~~~~~~
Path is enabled; The relevant rules are:
	Egress:
		security group sg1-ky allows connection with the following allow rules
			index: 0, direction: outbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0
		network ACL acl2-ky allows connection with the following allow rules
			index: 2, direction: outbound , src: 10.240.20.0/24 , dst: 10.240.10.0/24, conn: all, action: allow

	Ingress:
		network ACL acl1-ky allows connection with the following allow rules
			index: 4, direction: inbound , src: 10.240.20.0/24 , dst: 10.240.10.0/24, conn: all, action: allow
		security group sg1-ky allows connection with the following allow rules
			index: 1, direction: inbound,  conns: protocol: all, remote: 0.0.0.0/0, local: 0.0.0.0/0

TCP response is enabled; The relevant rules are:
	Egress:
		network ACL acl1-ky allows connection with the following allow rules
			index: 2, direction: outbound , src: 10.240.10.0/24 , dst: 10.240.20.0/24, conn: all, action: allow

	Ingress:
		network ACL acl2-ky allows connection with the following allow rules
			index: 6, direction: inbound , src: 10.240.10.0/24 , dst: 10.240.20.0/24, conn: all, action: allow

------------------------------------------------------------------------------------------------------------------------
